--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -85,7 +85,7 @@
     </table>
     {% ifequal data.results_type _("Favourite") %}
     <ul class="link-list">
-        <li><a href="{% url places:nearby-detail data.type.slug %}">
+        <li class="switcher"><a href="?{{ type }}=nearby" class="nearby-switcher has-ajax-handler">
             {% blocktrans with data.type.verbose_name_plural as entity_type %}View nearby {{ entity_type }}{% endblocktrans %}
         </a></li>
     </ul>
