Added Arial as a fallback behind Liberation Sans. The two are metric-compatible, so should give consistent rendering across browsers. (Arial is non-free; Liberation Sans a free alternative found on some FLOSS platforms.)

--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -1,6 +1,6 @@
 body {
     background:#bbc4ce url('../../site/images/gradients/backdrop-iphone.png') repeat-x top;
-    font-family: "Liberation Sans", sans-serif;
+    font-family: "Liberation Sans", Arial, sans-serif;
     font-size:9pt;
     -webkit-text-size-adjust: none;
     text-align: left;
