--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -1,4 +1,4 @@
-{% extends "podcasts/base.html" %}{% load molly_utils %}{% load molly_external_media %}
+{% extends "podcasts/base.html" %}{% load molly_utils %}
 {% load i18n %}
 {% block content %}
 
@@ -17,24 +17,7 @@
 		
 <ul class="link-list">
 {% for podcast in podcasts %}
-    <li class="podcast">
-      <a href="{{ podcast.get_absolute_url }}">
-        <div class="center podcast-image">
-          {% if podcast.logo %}
-          {% with device|device_has_parent:"apple_iphone_ver4"|yesno:"120,60" as max_width %}
-          <img class="no-border" src="{% external_image podcast.logo max_width %}" width="60" height="60" alt="" />
-          {% endwith %}
-          {% endif %}
-          <img class="no-border" src="{{ STATIC_URL }}site/images/icons/list-{{ podcast.medium }}.png" alt="({{ podcast.medium }})">
-        </div>
-        <div class="podcast-title">
-        {{ podcast.title }}
-        <br />
-        <span class="podcast-description">{{ podcast.description|truncatewords:10 }}</span>
-        </div>
-        <br class="clear"/>
-      </a>
-    </li>
+  {% include "podcasts/podcast.html" %}
 {% empty %}
   {% if more_in_all %}
     <li><em>{% trans "Sorry, there are no podcasts in your language." %}</em></li>
