--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -58,7 +58,7 @@
     <table class="content{% ifequal data.results_type _("Favourite") %} no-round-bottom{% endifequal %}">
         <tbody>
         {% for entity in data.entities %}
-            <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" class="inherit-color">
+            <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" class="subtle-link">
                     {{ entity.title }}
                     {% if entity.distance %}<small>
                         {% blocktrans with entity.distance.m|round_up_10 as distance and entity.bearing as bearing %}(about {{ distance }}m {{ bearing }}){% endblocktrans %}
@@ -71,7 +71,7 @@
                 {% for service in entity.metadata.real_time_information.services %}
                     <tr>
                         <td class="center"><big>
-                            {% if service.route %}<a href="{{ entity.get_absolute_url }}service?route={{ service.service|urlencode }}">{% endif %}
+                            {% if service.route %}<a href="{{ entity.get_absolute_url }}service?route={{ service.service|urlencode }}" class="subtle-link">{% endif %}
                                 {{ service.service }}
                             {% if service.route %}</a>{% endif %}
                         </big></td>
@@ -148,7 +148,7 @@
   
     <ul class="content-list">
     {% for alert in travel_alerts %}
-        <li><a href="{{ alert.get_absolute_url }}" class="inherit-color">{{ alert.title }}</a></li>
+        <li><a href="{{ alert.get_absolute_url }}" class="subtle-link">{{ alert.title }}</a></li>
     {% endfor %}
     </ul>
 </div>
