--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -4,7 +4,7 @@
 
 body {
     background:#bbc4ce url('../../site/images/gradients/backdrop-iphone.png') repeat-x top;
-    font-size: 0.75em;
+    font-size: 0.8em;
     font-family: "Liberation Sans", Arial, sans-serif;
     -webkit-text-size-adjust: none;
     text-align: left;
@@ -22,7 +22,7 @@ small {
 .invisible {display:none;}
 .center {text-align:center;}
 .clear {clear:both;}
-.inherit-color {color:inherit;}
+.subtle-link {color:inherit;}
 .no-border {border:0;}
 
 h2 {
@@ -118,7 +118,7 @@ div#bc-title h1 {
     line-height:30px;
     padding-top: 0px;
     float:left;
-    font-size:1.2em;
+    font-size:1.3em;
     text-align:left;
     color:#ffffff;
     white-space: nowrap;
@@ -659,7 +659,6 @@ table.content > * > tr.sub-section-divider > th, table.content > thead > tr > th
 
     padding: 5px 5px 5px 7px;
     border: 0;
-    font-size: 1.1em;
 }
 
 table.content > * > tr > * {
@@ -740,8 +739,7 @@ div.button > a {
     margin-right: 28px !important;
 }
 
-/*.as-text-link,
-#bottom-links button {
+.as-text-link {
     background: none !important;
     border: 0 !important;
     -moz-box-shadow: none !important;
@@ -751,7 +749,7 @@ div.button > a {
     color: #000000 !important;
     text-shadow: none !important;
     cursor: pointer;
-}*/
+}
 
 .link-list .as-text-link {
     color: #ffffff !important;
