--- a/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/apps/places/templates/places/entity_detail.html
@@ -25,37 +25,36 @@
 {% endifequal %}
 
 <div class="section" id="poi-category-selector">
-<div class="header">
+  <div class="header">
     {% if not entity.metadata.real_time_information %}
       <h2>{% trans "Map" %}</h2>
     {% else %}
       {% if entity.identifiers.naptan %}
-	<h2><small>
-	    {% blocktrans with entity.identifiers.naptan as stop_id %}Real-time information from stop {{ stop_id }}{% endblocktrans %}
-	     - <span class="update-time">{% now "H:i:s" %}</span>
-	</small></h2>
+        <h2><small>
+          {% blocktrans with entity.identifiers.naptan as stop_id %}Real-time information from stop {{ stop_id }}{% endblocktrans %}
+           - <span class="update-time">{% now "H:i:s" %}</span>
+        </small></h2>
       {% else %}
-	<h2>{% trans "Real-time information" %} - <span class="update-time">{% now "H:i:s" %}</span></h2>
+        <h2>{% trans "Real-time information" %} - <span class="update-time">{% now "H:i:s" %}</span></h2>
       {% endif %}
     {% endif %}
- </div>
- {% include "places/metadata/real_time_information.html" %}
- <div class="section-content no-round-bottom">
-    {% if entity.location %}
-	
-	{% render_location_map entity.location %}
- </div>
-	<ul class="link-list category-list">
-	    <li class="nearby">
-		<a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">
-			{% trans "Find things near here" %}</a>
-		</li>
-	</ul>
-	{% else %}
-	    <div class="note"><div class="bubble">
-	      {% blocktrans with entity.primary_type.verbose_name as type_name %}We do not yet have a location for this {{ type_name }}.{% endblocktrans %}
-	    </div></div>
-	{% endif %}
+  </div>
+  {% include "places/metadata/real_time_information.html" %}
+  {% if entity.location %}
+    <div class="section-content no-round-bottom">
+      {% render_location_map entity.location %}
+    </div>
+    <ul class="link-list category-list">
+      <li class="nearby">
+        <a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">
+          {% trans "Find things near here" %}</a>
+      </li>
+    </ul>
+    {% else %}
+      <div class="note"><div class="pad-10">
+        {% blocktrans with entity.primary_type.verbose_name as type_name %}We do not yet have a location for this {{ type_name }}.{% endblocktrans %}
+      </div></div>
+    {% endif %}
 </div>
 
 {% block metadata %}
@@ -72,10 +71,10 @@
   <ul class="content-list">
     {% for entity in associated_type.entities %}
       <li>
-	<h3><a href="{{ entity.get_absolute_url }}">{{ entity.title }}</a></h3>
-	{% if entity.metadata.real_time_information %}
-	  {% include "places/metadata/real_time_information.html" %}
-	{% endif %}
+        <h3><a href="{{ entity.get_absolute_url }}">{{ entity.title }}</a></h3>
+        {% if entity.metadata.real_time_information %}
+          {% include "places/metadata/real_time_information.html" %}
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
