--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -50,6 +50,20 @@
     {% include "places/metadata/transit_status.html" %}
 {% endif %}
 
+<div class="section">
+    <div class="header">
+        <h2>{% trans "Show routes" %}</h2>
+    </div>
+    <form action="{{ full_path }}" method="get" class="form-section">
+        <select name="route" multiple="multiple">
+            {% for route in routes %}
+                <option{% if route in selectedroutes %} selected="selected"{% endif %}>{{ route }}</option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="Show" />
+    </form>
+</div>
+
 {% for type, data in nearby.items %}
 <div class="section" id="{{ type }}">
     <div class="header">
@@ -59,11 +73,11 @@
         <tbody>
         {% for entity in data.entities %}
             <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" class="subtle-link">
-                    {{ entity.title }}
-                    {% if entity.distance %}<small>
-                        {% blocktrans with entity.distance.m|round_up_10 as distance and entity.bearing as bearing %}(about {{ distance }}m {{ bearing }}){% endblocktrans %}
-                    </small>{% endif %}
-                </a></th></tr>
+                {{ entity.title }}
+                {% if entity.distance %}<small>
+                    {% blocktrans with entity.distance.m|round_up_10 as distance and entity.bearing as bearing %}(about {{ distance }}m {{ bearing }}){% endblocktrans %}
+                </small>{% endif %}
+            </a></th></tr>
             {% if entity.metadata.real_time_information.pip_info %}
                 <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info|join:"<br/>" }}</td></tr>
             {% endif %}
